# Whorms

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  client.cpp  client.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  common_escenarioDTO.cpp  common_escenarioDTO.h  common_jugadorDTO.cpp  common_jugadorDTO.h  common_resolver.cpp  common_resolvererror.h  common_socket.cpp  common_state_game.cpp  common_state_game.h  common_vigasDTO.cpp  common_vigasDTO.h  escenario.cpp  escenario.h  gusano.h  lobby.cpp  lobby.h  monitor_jugador.cpp  monitor_jugador.h  objeto.h  partida.cpp  partida.h  queue.h  server.cpp  server.h  (+16 more)
Documentacion/: DocumentacionTecnica.md  ManualDeProyecto.md  ManualDeUsusario.md
Editor/: CMakeLists.txt  README.md
Editor/client_src/: client_editor.cpp  client_editor.h  client_main.cpp  configuracion_mapa.cpp  configuracion_mapa.h  game.cpp  game.h
Editor/client_src/DTO/: common_objeto.cpp  common_objeto.h  posicion_spawn.h  posicion_viga.h
Editor/client_src/graphics/: path_loader.cpp  path_loader.h  texture_manager.cpp  texture_manager.h  view.cpp  view.h  whorms.h
Editor/data/: configuracion.yaml
Editor/data/sprites/: view.cpp
Editor/graphics_editor/: createpopup.cpp  createpopup.h  createpopup.ui  joinpopup.cpp  joinpopup.h  joinpopup.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_createpopup.h  ui_joinpopup.h  ui_mainwindow.h
Editor/graphics_editor/assets/: resources.qrc
Editor/libs/box2d-2.4.0/: CMakeLists.txt
Editor/libs/box2d-2.4.0/include/box2d/: b2_body.h
Editor/libs/box2d-2.4.0/src/dynamics/: b2_body.cpp
Editor/mapas/: Nombre del mapa.yaml  el_nombre_es.yaml  hasta_el_final.yaml  mapita.yaml  nuevo_mapa.yaml
client_src/: client.cpp  client.h  client_lobby.cpp  client_lobby.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  common_escenarioDTO.cpp  common_escenarioDTO.h  common_jugadorDTO.cpp  common_jugadorDTO.h  common_state_game.cpp  common_state_game.h  common_vigasDTO.cpp  common_vigasDTO.h  game.cpp  game.h
client_src/DTO/: common_armaDTO.cpp  common_armaDTO.h  common_escenarioDTO.cpp  common_escenarioDTO.h  common_ganadorDTO.cpp  common_ganadorDTO.h  common_jugadorDTO.cpp  common_jugadorDTO.h  common_objetoDTO.cpp  common_objetoDTO.h  common_paqueteDTO.cpp  common_paqueteDTO.h  common_provisionDTO.cpp  common_provisionDTO.h  common_segundosDTO.cpp  common_segundosDTO.h  common_state_game.h  common_turnoDTO.cpp  common_turnoDTO.h  common_vientoDTO.cpp  common_vientoDTO.h  common_vigaDTO.cpp  common_vigaDTO.h
client_src/actions/: action.h  common_ataque_aereo.cpp  common_ataque_aereo.h  jump_back.h  jump_foward.h  left.h  position.h  right.h  shoot.h  shoot_power.h  shoot_power_timer.h  shoot_timer.h  weapon.h
client_src/graphics/: explotion.cpp  explotion.h  path_loader.cpp  path_loader.h  team_health.cpp  team_health.h  texture_manager.cpp  texture_manager.h  view.cpp  view.h  whorms.cpp
client_src/weapons/: common_ataque_aereo.cpp  common_ataque_aereo.h  weapon.h
client_src/worm/: worm_idle.cpp  worm_idle.h  worm_status.h  worm_walk.cpp  worm_walk.h
client_src/worm/weapon/: crosshair.cpp  crosshair.h  powerbar.cpp  powerbar.h  worm_airstrike.cpp  worm_airstrike.h  worm_banana.cpp  worm_banana.h  worm_bat.cpp  worm_bat.h  worm_bazooka.cpp  worm_bazooka.h  worm_dynamite.cpp  worm_dynamite.h  worm_grenade.cpp  worm_grenade.h  worm_grenade_cluster.cpp  worm_grenade_cluster.h  worm_grenade_holy.cpp  worm_grenade_holy.h  worm_mortar.cpp  worm_mortar.h  worm_no_weapon.h  worm_teleport.cpp  worm_teleport.h  worm_weapon.h
common_src/: common_liberror.cpp  common_resolvererror.cpp
data/: configuracion.yaml
data/sprites/: view.cpp
graphics_lobby/: createpopup.cpp  createpopup.h  createpopup.ui  joinpopup.cpp  joinpopup.h  joinpopup.ui  joinpopup.ui.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_createpopup.h  ui_joinpopup.h  ui_mainwindow.h  ui_waitRoom.h  ui_waitRoomGamers.h  waitRoom.cpp  waitRoom.h  waitRoom.ui  waitRoomGamers.cpp  waitRoomGamers.h  waitRoomGamers.ui
graphics_lobby/assets/: resources.qrc
mapas/: Nombre del mapa.yaml  alabaham.yaml  alaska.yaml  andromeda.yaml  comparten_carpeta.yaml  jshiedoweweb del mapa.yaml  mapa_principal.yaml  nuevo_mapa.yaml
server_src/: bloque.h  configuracion.cpp  configuracion.h  configuracion_mapa.cpp  configuracion_mapa.h  escenario.cpp  escenario.h  gusano.cpp  gusano.h  inventario.cpp  inventario.h  lobby.cpp  lobby.h  monitor_jugador.cpp  monitor_jugador.h  partida.cpp  partida.h  server.cpp  server.h  server_acceptor.cpp  server_acceptor.h  server_jugador.cpp  server_jugador.h  server_lobby.cpp  server_lobby.h  server_main.cpp  server_protocol.cpp  server_protocol.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  turno.cpp  turno.h  turno_gusano.cpp  turno_gusano.h
server_src/accion/: accion.h  ataque_aereo.h  cambio_arma.h  desconexion.h  mover_derecha.h  mover_izquierda.h  saltar_adelante.h  saltar_atras.h  uso_arma.h
server_src/data/: arma_DTO.h  cambio_turno.h  cambio_turno_DTO.h  data.h  data_DTO.h  escenario_DTO.h  ganador_DTO.h  paquete_DTO.h  paquete_gusanos_DTO.h  paquete_objetos_DTO.h  posicion_jugador.h  posicion_lanzable.h  posicion_objeto.h  posicion_viga.h  segundo_DTO.h  viento_velocidad.h
server_src/objeto/: RayCastWeaponExploded.cpp  RayCastWeaponExploded.h  arma.cpp  arma.h  ataque_aereo.cpp  ataque_aereo.h  banana.cpp  banana.h  bate.cpp  bate.h  bazooka.cpp  bazooka.h  dinamita.cpp  dinamita.h  fragmento.cpp  fragmento.h  granada_roja.cpp  granada_roja.h  granada_santa.cpp  granada_santa.h  granada_verde.cpp  granada_verde.h  gusano.cpp  gusano.h  misil_aereo.cpp  misil_aereo.h  mortero.cpp  mortero.h  mundo.cpp  mundo.h  objeto.cpp  objeto.h  provision.cpp  provision.h  teletransportacion.cpp  teletransportacion.h  viento.cpp  viento.h
(+4 files in other folders)
